@@ -34,13 +34,16 @@ configuration files, which may define the same kind of option
 as the `gngeorc'."""
 
 	def __init__(self,datarootpath,xgngeoUserDir,gngeoUserDir):
+		#Initial attributes.
 		self.datarootpath = datarootpath
-		self.xgngeoUserDir = xgngeoUserDir #XGngeo local configuration directory.
-		self.xgngeoConfFile = os.path.join(self.xgngeoUserDir,"xgngeo.conf") #Path to XGngeo config file.
-		self.gngeoUserDir = gngeoUserDir #Gngeo local configuration directory.
-		self.gngeorcPath = os.path.join(self.gngeoUserDir,"gngeorc") #Path to Gngeo config file.
-		
-		for dir in (self.xgngeoUserDir,self.gngeoUserDir):
+		self.gngeorc_buffer = None
+		self.paths = {
+			"xgngeoUserDir" : xgngeoUserDir, #XGngeo local configuration directory.
+			"xgngeoConf" : os.path.join(xgngeoUserDir,"xgngeo.conf"), #Path to XGngeo config file.
+			"gngeoUserDir" : gngeoUserDir, #Gngeo local configuration directory.
+			"gngeorc" : os.path.join(gngeoUserDir,"gngeorc"), #Path to Gngeo config file.
+			}
+		for dir in (self.paths["xgngeoUserDir"],self.paths["gngeoUserDir"]):
 			if not os.path.isdir(dir): os.mkdir(dir)
 
 	def getDefaultParams(self):
@@ -103,7 +106,7 @@ as the `gngeorc'."""
 			}
 
 	def exists(self):
-		return os.path.isfile(self.gngeorcPath),os.path.isfile(self.xgngeoConfFile)
+		return os.path.isfile(self.paths["gngeorc"]),os.path.isfile(self.paths["xgngeoConf"])
 
 	def getParams(self,mamename=None):
 		"""Try to get the params of the global or a Rom-specific configuration file.
@@ -112,11 +115,12 @@ as the `gngeorc'."""
 			#Parsing default main configuration files.
 			dict = [{},{}]
 			i=0
-			for path in self.gngeorcPath,self.xgngeoConfFile:
+			for path in self.paths["gngeorc"],self.paths["xgngeoConf"]:
 				if self.exists()[i]:
-					file = open(path,"r") #Open
-					content = file.readlines() #Read
-					file.close() #And close :p
+					file = open(path,"r") #Openning.
+					content = file.readlines() #Reading.
+					if i==0: self.gngeorc_buffer = content
+					file.close() #And closing. :p
 					for line in content:
 						line.strip()
 						if line[0]!="#" and line!="\n":
@@ -124,9 +128,9 @@ as the `gngeorc'."""
 							dict[i][plop.group(1).strip()] = plop.group(2).strip()
 				i+=1
 		else:
-			#Parsing specific rom configuration file.
+			#Parsing specific ROM configuration file.
 			dict = {}
-			path = os.path.join(self.gngeoUserDir,"%s.cf" % mamename)
+			path = os.path.join(self.paths["gngeoUserDir"],"%s.cf" % mamename)
 			if os.path.isfile(path):
 				file = open(path,"r") #Opening.
 				content = file.readlines() #Reading.
@@ -135,7 +139,8 @@ as the `gngeorc'."""
 					line.strip()
 					if line[0]!="#" and line!="\n":
 						plop = match("(\S*) (.*)",line)
-						dict[plop.group(1).strip()] = plop.group(2).strip()
+						if plop:
+							dict[plop.group(1).strip()] = plop.group(2).strip()
 
 		return dict
 
@@ -143,17 +148,43 @@ as the `gngeorc'."""
 		#Top comments. :p
 		content = []
 		content.append("# Gngeo global configuration file.\n\
-# Generated by XGngeo version %s (http://www.choplair.org/). ^o^\n\
+# Generated by XGngeo version %i (http://www.choplair.org/). ^o^\n\
 \n" % version)
 		content.append("# XGngeo configuration file.\n\
 # This file is dedicated to customize XGngeo's own features. ^o^\n\
 # It uses same syntax as Gngeo's.\n\
 \n")
 
-		#WAGLAMOT (``Write A Gngeorc Like A Maman Ours Technology") version 2 in action!
+		#WAGLAMOT (``Write A Gngeorc Like A Maman Ours Technology") version 3 in action!
 		i=0
 		for dict in gngeoDict,xgngeoDict:
+			#Use a first-pass, formating & comment preservative method (for gngeorc only).
+			if i==0:
+				yet_passed = []
+				preserved_content = ""
+				for line in self.gngeorc_buffer:
+					if line[0]=="#" or line=="\n":
+						preserved_content += line
+						if line[0]=="#": yet_passed.append(line[1:].strip())
+					else:
+						plop = match("(\S*) .*",line)
+						if plop:
+							key = plop.group(1).strip()
+							if dict.has_key(key) and not key in yet_passed:
+								preserved_content += "%s %s\n" % (key,dict[key])
+								yet_passed.append(key.strip())
+
+				#Removing top XGngeo comment if yet present.
+				mark = "(http://www.choplair.org/). ^o^\n\n"
+				pos = preserved_content.find(mark)
+				if pos>0: preserved_content = preserved_content[pos+len(mark):]
+
+				content[i] += "%s\n" % preserved_content.rstrip()
+
+			#Then follows the classic, destructive method. :p
 			for key, val in dict.items():
+				if i==0 and key in yet_passed: continue
+
 				if val==None:	#Unset value, simply display the param in a commented line.
 					val=""
 					content[i] += "#"
@@ -162,16 +193,16 @@ as the `gngeorc'."""
 			content[i] += "\n" #Final blank line.
 			i+=1
 
-		file = open(self.gngeorcPath,"w") #Opening (creating if doesn't exist).
+		file = open(self.paths["gngeorc"],"w") #Opening (creating if doesn't exist).
 		file.write(content[0]) #Writing.
 		file.close() #And closing.
 
-		file = open(self.xgngeoConfFile,"w") #Opening (creating if doesn't exist).
+		file = open(self.paths["xgngeoConf"],"w") #Opening (creating if doesn't exist).
 		file.write(content[1]) #Writing.
 		file.close() #And closing.
 
 	def writeRomConfig(self,dict,mamename,version):
-		path = os.path.join(self.gngeoUserDir,"%s.cf" % mamename)
+		path = os.path.join(self.paths["gngeoUserDir"],"%s.cf" % mamename)
 
 		#Top comment. :p
 		content = "# Specific configuration file for the \"%s\" Rom.\n\
@@ -186,6 +217,6 @@ as the `gngeorc'."""
 			content += "%s %s\n" % (key,val)
 			content += "\n" #Final blank line.
 
-		file = open(path,"w") #Open (creating if doesn't exist)
+		file = open(path,"w") #Openning (creating if doesn't exist)
 		file.write(content) #Writing.
 		file.close() #Then closing.
